--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-flexbox-grid": "^2.1.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.2",
     "web-vitals": "^1.1.0"
